# site-rag-chatbot

./: .gitignore  .markdownlint.json  .markdownlintignore  AGENTS.md  CLAUDE.md  Makefile  README.md
.sisyphus/plans/: multi-llm-switch.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md  (+1 more)
backend/: .black.toml  .gitignore  .ruff.toml  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
backend/scripts/: ingest_once.py  start-server.sh
backend/src/: __init__.py  app.py  auth.py  config.py  db.py  schemas.py
backend/src/api/: models.py
backend/src/api/routes/: admin.py  auth.py  chat.py  ingest.py
backend/src/ingest/: __init__.py  chunking.py  dedupe.py  normalize.py  pipeline.py
backend/src/ingest/sources/: __init__.py  csv_loader.py  doc_loader.py  docx_loader.py  excel_loader.py  file_loader.py  html_loader.py  md_loader.py  pdf_loader.py  ppt_loader.py  pptx_loader.py  sitemap_crawler.py
backend/src/rag/: __init__.py  chat.py  embedder.py  prompt.py  retriever.py
backend/tests/integration/: test_embedding_integration.py
backend/tests/unit/: test_embedder.py  test_md_loader.py
docs/: 003-free-embedding-model.md  004-site-improvements.md  README.md  architecture-workflow.md  batch-folder-upload.md  diagram.md  implementation-summary.md  playbook_ingestion.md  playbook_retrieval.md  prompt-configuration.md  quick-reference.md  tech-stack-analysis.md
frontend/: .eslintignore  .gitignore  AGENTS.md  components.json  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts
(+33 files in other folders)
